# cwltool

./: .codecov.yml  .coverage.cs-macbook-pro.private.wireless.med.harvard.edu.55182.799786  .coverage.cs-macbook-pro.private.wireless.med.harvard.edu.56306.473871  .coveragerc  .coveragerc_jenkins  .dockerignore  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .mergify.yml  .readthedocs.yml  .snyk  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CWLProv.rst  Dockerfile  Jenkinsfile  MANIFEST.in  Makefile  README.rst  appveyor.yml  build-cwl-docker.sh  build-cwltool-docker.sh  cibw-requirements.txt  conformance-test.sh  cwl-docker.sh  cwltool-in-docker.sh  cwltool.Dockerfile  cwltool.py  cwltool_module.Dockerfile  ez_setup.py  gittaggers.py  jenkins.bash  jenkins.bat  lint-requirements.txt  lsout  mypy-requirements.txt  (+15 more)
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: ci-tests.yml  codeql-analysis.yml  quay-publish.yml  tox-tests.yml  wheels.yml  zizmor.yml
.jenkins/: conformance-test.bat  conformance.bat  conformance_test.bat  setup.bat  test.bat
cwl-runner/: setup.py
cwlref-runner/: README  setup.py
cwltool/: __init__.py  __main__.py  argparser.py  aslist.py  builder.py  checker.py  cltool.py  command_line_tool.py  context.py  cuda.py  cwlNodeEngine.js  cwlNodeEngineJSConsole.js  cwlNodeEngineWithContext.js  cwlrdf.py  cwltest.py  cwlviewer.py  docker.py  docker_id.py  docker_uid.py  draft2tool.py  draft2tool_BACKUP_1669.py  env_to_stdout.py  errors.py  executors.py  expression.py  extensions-v1.1.yml  extensions-v1.2.yml  extensions-v1.3.yml  extensions.yml  factory.py  fast_parser.py  flatten.py  hello.simg  job.py  load_tool.py  loghandler.py  main.py  mpi.py  mutation.py  pack.py  (+25 more)
cwltool-tes/: README.md  conformance_052417.txt  conformance_052517.txt  cwltool-tes  requirements.txt  run_conformance.sh  setup.py
cwltool-tes/cwltool_tes/: main.py  pipeline.py  poll.py  tes.py
cwltool-tes/tests/: common_test_util.py  conformance_052517.txt  funnel_test_util.py  hashsplitter-md5.cwl.yml  hashsplitter-sha.cwl.yml  hashsplitter-unify.cwl.yml  hashsplitter-whirlpool.cwl.yml  hashsplitter-workflow.cwl.yml  requirements.txt  run_conformance.sh  (+1 more)
docs/: CWLProv.rst  Makefile  cli.rst  conf.py  cwltool.argparser.rst  cwltool.builder.rst  cwltool.checker.rst  cwltool.command_line_tool.rst  cwltool.context.rst  cwltool.cwlrdf.rst  cwltool.docker.rst  cwltool.docker_id.rst  cwltool.errors.rst  cwltool.executors.rst  cwltool.expression.rst  cwltool.factory.rst  cwltool.flatten.rst  cwltool.job.rst  cwltool.load_tool.rst  cwltool.loghandler.rst  cwltool.main.rst  cwltool.mutation.rst  cwltool.pack.rst  cwltool.pathmapper.rst  cwltool.process.rst  cwltool.procgenerator.rst  cwltool.provenance.rst  cwltool.resolver.rst  cwltool.rst  cwltool.sandboxjs.rst  cwltool.secrets.rst  cwltool.singularity.rst  cwltool.software_requirements.rst  cwltool.stdfsaccess.rst  cwltool.subgraph.rst  cwltool.update.rst  cwltool.utils.rst  cwltool.validate_js.rst  cwltool.workflow.rst  index.rst  (+5 more)
mypy-stubs/: bagit.pyi  mistune.pyi  pydot.pyi  subprocess.pyi
node-expr-engine/: cwlNodeEngine.js
schema_salad/: makedoc.py  ref_resolver.py  schema.py  validate.py
site/: makecontext.cwl
tests/: 2205.cwl  CometAdapter.cwl  __init__.py  arg-empty-prefix-separate-false.cwl  bundle-context.jsonld  cache-test.sh  cache_environment.yml  cache_environment2.yml  cache_environment_tool.cwl  debian_image_id.cwl  debian_image_id2.cwl  default_values_list.cwl  echo-badposition-expr.cwl  echo-cwlrun-job.yaml  echo-groups.cwl  echo-job.yaml  echo-position-expr.cwl  echo-stderr.cwl  echo-stdout-log-dir.cwl  echo.cwl  echo_broken_outputs.cwl  echo_no_output.cwl  env-preserve-step-tool.cwl  env-preserve-step-wf.cwl  env.cwl  env2.cwl  env3.cwl  env4.cwl  env_with_software_req.yml  fail-unconnected-expressiontool.cwl  fail-unspecified-input-expressiontool.cwl  iwdr_bad_expr.cwl  iwdr_dir_literal_real_file.cwl  iwdr_writable_secfile-inputs.json  iwdr_writable_secfile.cwl  listing2-job.yml  load_contents-array.cwl  load_contents-array.yml  loop.cwl  nested-array.cwl  (+117 more)
travis/: os_install.sh  setup-pyenv.sh  singularity_install.sh
typeshed/: bagit.pyi  subprocess.pyi
util/: docker2rootfs  requirements.txt
v1.1.0-dev1/: CommandLineTool.yml  Process.yml
(+1618 files in other folders)
