[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=8.0.4,<9",
    "mypy==1.14.1",  # also update mypy-requirements.txt
    "types-requests",
    "types-psutil",
    "importlib_resources>=1.4;python_version<'3.9'",
    "ruamel.yaml>=0.16.0,<0.19",
    "schema-salad>=8.7,<9",
    "cwl-utils>=0.32",
    "toml",
    "argcomplete>=1.12.0",
    "rich-argparse"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "cwltool/_version.py"

[tool.cibuildwheel]
test-command = "python -m pytest --ignore cwltool/schemas -n logical --dist worksteal --junitxml={project}/test-results/junit_$(python -V | awk '{print $2}')_${AUDITWHEEL_PLAT}.xml -k 'not (test_bioconda or test_env_filtering or test_udocker)' --pyargs cwltool"
test-requires = "-r test-requirements.txt"
test-extras = "deps"
skip = "pp*"
#      ^ skip building wheels on PyPy (any version)
build-verbosity = 1
environment = { CWLTOOL_USE_MYPYC="1", MYPYPATH="$(pwd)/mypy-stubs" }

# Install system library
[tool.cibuildwheel.linux]
before-all = "apk add libxml2-dev libxslt-dev nodejs || yum install -y libxml2-devel libxslt-devel nodejs environment-modules || apt-get install -y --no-install-recommends libxml2-dev libxslt-dev nodejs environment-modules"

[tool.black]
line-length = 100
target-version = [ "py39" ]
