[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=8.0.4,<10",
    "mypy==1.19.1",  # also update mypy-requirements.txt
    "types-requests",
    "types-psutil>=7.1.3.20251210",
    "ruamel.yaml>=0.16.0,<0.20",
    "schema-salad>=8.9,<9",
    "cwl-utils>=0.32",
    "toml",
    "argcomplete>=1.12.0",
    "rich-argparse",
    "pydot >= 1.4.1"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "cwltool/_version.py"

[tool.cibuildwheel]
test-command = "python -m pytest --ignore cwltool/schemas -n logical --dist worksteal --junitxml={project}/test-results/junit_$(python -V | awk '{print $2}')_${AUDITWHEEL_PLAT}.xml -k 'not (test_bioconda or test_env_filtering or test_udocker)' --pyargs cwltool"
test-requires = "-r test-requirements.txt"
build-verbosity = 1
environment = { CWLTOOL_USE_MYPYC="1", MYPYPATH="$(pwd)/mypy-stubs" }
# Disable building PyPy wheels on all platforms
# Skip free-threaded builds, as mypyc does not support them yet
# https://mypy.readthedocs.io/en/stable/changelog.html#mypyc-partial-unsafe-support-for-free-threading
skip = ["pp*", "cp31?t-*"]

# Install system library
[tool.cibuildwheel.linux]
before-all = "apk add libxml2-dev libxslt-dev nodejs || yum install -y libxml2-devel libxslt-devel nodejs environment-modules || apt-get install -y --no-install-recommends libxml2-dev libxslt-dev nodejs environment-modules"

[tool.black]
line-length = 100
target-version = [ "py310" ]
